--- a/Source_Osx/PopEngine.xib
+++ b/Source_Osx/PopEngine.xib
@@ -13,7 +13,7 @@
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
-        <menu title="AMainMenu" systemMenu="main" id="29">
+        <menu title="AMainMenu" systemMenu="main" identifier="MetalView" id="29">
             <items>
                 <menuItem title="PopEngineMac" id="56">
                     <menu key="submenu" title="PopEngineMac" systemMenu="apple" id="57">
@@ -101,15 +101,22 @@
                     </menu>
                 </menuItem>
             </items>
-            <point key="canvasLocation" x="140" y="154"/>
+            <accessibility identifier="MetalView"/>
+            <point key="canvasLocation" x="99" y="-199"/>
         </menu>
+        <window title="Window" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" frameAutosaveName="" animationBehavior="default" id="Gyy-mk-ndg">
+            <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
+            <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
+            <rect key="contentRect" x="1440" y="907" width="480" height="270"/>
+            <rect key="screenRect" x="0.0" y="0.0" width="1920" height="1177"/>
+            <view key="contentView" identifier="MetalView" id="rpg-Ga-5Xw" userLabel="MetalView" customClass="MTKView">
+                <rect key="frame" x="0.0" y="0.0" width="480" height="270"/>
+                <autoresizingMask key="autoresizingMask"/>
+                <accessibility identifier="MetalView"/>
+            </view>
+            <point key="canvasLocation" x="113" y="54"/>
+        </window>
         <customObject id="494" customClass="AppDelegate"/>
         <customObject id="420" customClass="NSFontManager"/>
-        <customView id="1vd-Zr-ZP9" userLabel="MetalView" customClass="MTKView">
-            <rect key="frame" x="0.0" y="0.0" width="378" height="256"/>
-            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES"/>
-            <accessibility identifier="MetalView"/>
-            <point key="canvasLocation" x="222" y="340"/>
-        </customView>
     </objects>
 </document>
